enough for today

--- a/index.html
+++ b/index.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing page/title>
+    <title>Landing page</title>
+    <link rel="shortcut icon" href="./favicon/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="144x144" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
+    <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="./favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="./favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="sml_txt">
+            <p>India's first mobile app for construction Industry. <a href="#">Learn More</a></p>
+        </div>
+        <div class="header_box">
+            <p class="logo">Collab</p>
+            <div class="users_menu">
+                <a href="#"><p>About</p></a>
+                <a href="#"><p>Product</p></a>
+                <a href="#"><p>Team</p></a>
+                <a href="#"><p>FAQ</p></a>
+                <a href="#"><p>Blog</p></a>
+                <a href="#"><p>Shop</p></a>
+                <button>Request Demo</button>
+            </div>
+        </div>
+    </header>
+    <section class="main_section">
+        <p>Easy solution for builders and contractors <br>to manage and execute projects within budget range</p>
+        <button class="st_button">Request Demo</button>
+        <div class="mobile">MOBILE</div>
+        <button class="nd_button">Explore Product</button>
+    </section>
 </body>
 </html>
