--- a/index.html
+++ b/index.html
@@ -37,8 +37,31 @@
     <section class="main_section">
         <p>Easy solution for builders and contractors <br>to manage and execute projects within budget range</p>
         <button class="st_button">Request Demo</button>
-        <div class="mobile">MOBILE</div>
+        <div class="mobile">
+            <div class="mobile2">
+                <p class="logo2">Collab</p>
+            </div>
+        </div>
         <button class="nd_button">Explore Product</button>
+    </section>
+    <section class="second_section">
+        <p class="bigger_text">Trusted by top brands</p>
+        <div class="avatars">
+            <img src="./avatars/1.png" alt="figma">
+            <img src="./avatars/2.png" alt="figma2">
+            <img src="./avatars/3.png" alt="figma3">
+            <img src="./avatars/4.png" alt="figma4">
+            <img src="./avatars/5.png" alt="figma5">
+        </div>
+        <p class="bigger_text">How does Collab-app help?</p>
+        <div class="help_section">
+            <div class="help">
+
+            </div>
+            <div class="cell-phone">
+
+            </div>
+        </div>
     </section>
 </body>
 </html>
