--- a/index.html
+++ b/index.html
@@ -53,13 +53,22 @@
             <img src="./avatars/4.png" alt="figma4">
             <img src="./avatars/5.png" alt="figma5">
         </div>
-        <p class="bigger_text">How does Collab-app help?</p>
         <div class="help_section">
-            <div class="help">
-
-            </div>
-            <div class="cell-phone">
-
+            <p class="bigger_text">How does Collab-app help?</p>
+            <div class="help_cont">
+                <div class="help">
+                    <div class="help_buttons">
+                        <div>asd</div>
+                        <div>asd</div>
+                    </div>
+                    <div class="help_notes">
+                        <p>Work/Material request: Whenever a client wants to start a work, request notifications with date and time for materials and artisians will be promted through their app.</p>
+                        <p>Project Management: Work on multiple projects...see more</p>
+                        <p>Payment: Get paid for the step by step work...see more</p>
+                        <p>Tutorials: Explore the video tutorials to learn... see more</p>
+                    </div>
+                </div>
+                <img class="cell_phone" src="./img/phone.png" alt="phone">
             </div>
         </div>
     </section>
