--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                         <div>asd</div>
                     </div>
                     <div class="help_notes">
-                        <p>Work/Material request: Whenever a client wants to start a work, request notifications with date and time for materials and artisians will be promted through their app.</p>
-                        <p>Project Management: Work on multiple projects...see more</p>
-                        <p>Payment: Get paid for the step by step work...see more</p>
-                        <p>Tutorials: Explore the video tutorials to learn... see more</p>
+                        <p><b>Work/Material request:</b> Whenever a client wants to start a work, request notifications with date and time for materials and artisians will be promted through their app.</p>
+                        <p><b>Project Management:</b> Work on multiple projects...see more</p>
+                        <p><b>Payment:</b> Get paid for the step by step work...see more</p>
+                        <p><b>Tutorials:</b> Explore the video tutorials to learn... see more</p>
                     </div>
                 </div>
                 <img class="cell_phone" src="./img/phone.png" alt="phone">
