--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 </head>
 <body>
     <header>
-        <div class="sml_txt">
-            <p>India's first mobile app for construction Industry. <a href="#">Learn More</a></p>
-        </div>
+        <p class="sml_txt">India's first mobile app for construction Industry. <a href="#">Learn More</a></p>
         <div class="header_box">
             <p class="logo">Collab</p>
             <div class="users_menu">
@@ -38,8 +36,10 @@
         <p>Easy solution for builders and contractors <br>to manage and execute projects within budget range</p>
         <button class="st_button">Request Demo</button>
         <div class="mobile">
-            <div class="mobile2">
-                <p class="logo2">Collab</p>
+            <div class="mobile">
+                <div class="mobile2">
+                    <p class="logo2">Collab</p>
+                </div>
             </div>
         </div>
         <button class="nd_button">Explore Product</button>
@@ -58,19 +58,57 @@
             <div class="help_cont">
                 <div class="help">
                     <div class="help_buttons">
-                        <div>asd</div>
-                        <div>asd</div>
+                        <div>Vendor app</div>
+                        <div>Site Supervisor app</div>
                     </div>
                     <div class="help_notes">
                         <p><b>Work/Material request:</b> Whenever a client wants to start a work, request notifications with date and time for materials and artisians will be promted through their app.</p>
-                        <p><b>Project Management:</b> Work on multiple projects...see more</p>
-                        <p><b>Payment:</b> Get paid for the step by step work...see more</p>
-                        <p><b>Tutorials:</b> Explore the video tutorials to learn... see more</p>
+                        <p><b>Project Management:</b> Work on multiple projects...<b>see more</b></p>
+                        <p><b>Payment:</b> Get paid for the step by step work...<b>see more</b></p>
+                        <p><b>Tutorials:</b> Explore the video tutorials to learn... <b>see more</b></p>
                     </div>
                 </div>
                 <img class="cell_phone" src="./img/phone.png" alt="phone">
             </div>
         </div>
     </section>
+    <section class="third_section">
+        <p class="bigger_text">Fastest, Safest & Budget friendly</p>
+        <p class="sml_txt2">Managing your projects on spreadsheet  or messaging app is a time-taking and inefficient way.They can't link various project data effectively at once place , thus you won't be able to avoid project cost escalation effectively.</p>
+        <div class="construction">
+            <img src="./img/Rectangle 13.png" alt="construction">
+            <img src="./img/PlayCircle.png" alt="play">
+        </div>
+        <p class="bigger_text">Projects done on Collab</p>
+        <div class="projects">
+            <div>
+                <img src="./img/Rectangle 35.png" alt="constr">
+                <p>Builders</p>
+                <p>100+</p>
+            </div>
+            <div>
+                <img src="./img/Rectangle 34.png" alt="constr">
+                <p>Contractors</p>
+                <p>50+</p>
+            </div>
+            <div>
+                <img src="./img/Rectangle 21.png" alt="constr">
+                <p>Design Build Firm</p>
+                <p>30+</p>
+            </div>
+        </div>
+    </section>
+    <section class="fourth_section">
+        ASDASDASD
+    </section>
+    <section class="fifth_section">
+        ASDASDASD
+    </section>
+    <section class="sixth_section">
+        ASDASDASD
+    </section>
+    <footer>
+        <p class="sml_txt">@2022 Collab | All Rights Reserved</p>
+    </footer>
 </body>
 </html>
