--- a/index.html
+++ b/index.html
@@ -99,7 +99,46 @@
         </div>
     </section>
     <section class="fourth_section">
-        ASDASDASD
+        <p class="bigger_text">Ready to start with Collab apps?</p>
+        <p>Choose the package that suits you.</p>
+        <div class="subscription">
+            <p>Monthly</p>
+            <div>
+                <div></div>
+            </div>
+            <p>Yearly</p>
+            <div>10% discount</div>
+        </div>
+        <div class="plans">
+            <div>
+                <p>Basic</p>
+                <p>Rs.5000</p>
+                <div class="plans_button">Request Demo</div>
+                <span><img src="./img/CaretRight.png" alt="triangle"><p>Create BoQ</p></span>    
+                <span><img src="./img/CaretRight.png" alt="triangle"><p>Release Purchase Orders</p></span>    
+                <span><img src="./img/CaretRight.png" alt="triangle"><p>Cash flow analysis</p></span>    
+            </div>
+            <div>
+                <p>Essential</p>
+                <p>Rs.5000</p>
+                <div class="plans_button">Request Demo</div>
+                <span><img src="./img/CaretRight.png" alt="triangle"><p>Create BoQ</p></span>    
+                <span><img src="./img/CaretRight.png" alt="triangle"><p>Release Purchase Orders</p></span>    
+                <span><img src="./img/CaretRight.png" alt="triangle"><p>Cash flow analysis</p></span> 
+                <span><img src="./img/CaretRight.png" alt="triangle"><p>Vendor App</p></span>    
+                <span><img src="./img/CaretRight.png" alt="triangle"><p>Site Engineer App</p></span>    
+                <span><img src="./img/CaretRight.png" alt="triangle"><p>Client App</p></span>   
+            </div>
+            <div>
+                <p>Enterprise</p>
+                <p>Contact sales team</p>
+                <div class="plans_button">Request Demo</div>
+                <p>Unlock the full power to work effectively. Click “Request Demo” now.</p>
+            </div>
+        </div>
+        <div class="lorem">
+            LOREM
+        </div>
     </section>
     <section class="fifth_section">
         ASDASDASD
