--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="msapplication-config" content="./favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
 </head>
 <body>
     <header>
@@ -137,14 +138,55 @@
             </div>
         </div>
         <div class="lorem">
-            LOREM
+            <div>
+                <p class="fa fa-star"></p>
+                <p class="fa fa-star"></p>
+                <p class="fa fa-star"></p>
+                <p class="fa fa-star"></p>
+                <p class="fa fa-star"></p>
+            </div>
+            <div class="response">
+                <img src="./img/ArrowLeft.png" alt="arrow left">
+                <p class="response">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi, nisl eget tristique molestie. Quisque pharetra tincidunt interdum nunc, ac eget nisi, lectus interdum. Cras aliquet curabitur in morbi facilisi imperdiet non sollicitudin. Molestie volutpat vulputate eu nunc in vulputate sit. Varius neque accumsan libero, augue tortor. Id metus rutrum fringilla nibh neque, at bibendum. Diam libero morbi aliquet mi gravida velit enim.</p>
+                <img src="./img/ArrowLeft.png" alt="arrow right">
+            </div>
+            <img src="./img/Ellipse 24.png" alt="photo">
+            <p>Designation</p>
+            
+        </div>
+        <div class="join_us">
+            <p class="bigger_text">Join us</p>
+            <p>At Staart, we’re all about delivering better experiences for our customers. Join our team to make impact on the next billion users in the construction industry</p>
+            <div>
+                <button class="st_button">Explore Opportunities</button>
+                <img src="./img/Vector 1.png" alt="vector">
+                <img src="./img/photos/Ellipse 16.png" alt="photo">
+                <img src="./img/photos/Ellipse 17.png" alt="photo">
+                <img src="./img/photos/Ellipse 18.png" alt="photo">
+                <img src="./img/photos/Ellipse 19.png" alt="photo">
+                <img src="./img/photos/Ellipse 20.png" alt="photo">
+                <img src="./img/photos/Ellipse 21.png" alt="photo">
+                <img src="./img/photos/Ellipse 22.png" alt="photo">
+                <img src="./img/photos/Ellipse 23.png" alt="photo">
+                <p>You?</p>
+            </div>
         </div>
     </section>
     <section class="fifth_section">
-        ASDASDASD
+        <p>Download the Collab mobile apps?</p>
+        <div>
+            <button class="st_button">Try Free Demo</button>
+            <button class="st_button">Vendor App</button>
+            <button class="st_button">Site Engineer App</button>
+        </div>
     </section>
     <section class="sixth_section">
-        ASDASDASD
+        <div class="questions">
+
+        </div>
+        <div class="collab">
+            
+        </div>
     </section>
     <footer>
         <p class="sml_txt">@2022 Collab | All Rights Reserved</p>
