DONE" git commit -m DONE
cds

git commit -m DONE"

--- a/index.html
+++ b/index.html
@@ -182,10 +182,45 @@
     </section>
     <section class="sixth_section">
         <div class="questions">
-
+            <div>
+                <p>Still have a question?</p>
+                <p>Phanikondru@gmail.com</p>
+                <p>9676989240</p>
+            </div>
+            <img src="./img/Rectangle 28.png" alt="map">
         </div>
         <div class="collab">
-            
+            <div>
+                <p class="logo2">Collab</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi, nisl eget tristique molestie. Quisque pharetra tincidunt interdum nunc.</p>
+                <p>Follow us on:</p>
+                <div>
+                    <img src="./img/Facebook_Logo_2023.png" alt="facebook">
+                    <img src="./img/linkedin.svg" alt="linkedin">
+                    <img src="./img/snap.png" alt="snapchat">
+                    <img style="width: 40px;" src="./img/YouTube_full-color_icon_(2017).svg" alt="youtube">
+                </div>
+            </div>
+            <div>
+                <div class="links">
+                    <div>
+                        <p>Company</p>
+                        <p>About</p>
+                        <p>Product</p>
+                        <p>Team</p>
+                    </div>
+                    <div>
+                        <p>Resources</p>
+                        <p>Blog</p>
+                    </div>
+                    <div>
+                        <p>Legal</p>
+                        <p>Terms of Service</p>
+                        <p>Privacy Policy</p>
+                    </div>
+                </div>
+                <p>Contact Us at: <span>phanikondru@gmail.com</span></p>
+            </div>
         </div>
     </section>
     <footer>
