--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <p>Choose the package that suits you.</p>
         <div class="subscription">
             <p>Monthly</p>
-            <div>
+            <div id="slider">
                 <div></div>
             </div>
             <p>Yearly</p>
@@ -226,5 +226,6 @@
     <footer>
         <p class="sml_txt">@2022 Collab | All Rights Reserved</p>
     </footer>
+    <script src="./js/index.js"></script>
 </body>
 </html>
